# TapTapPaw

./: .gitignore  CHANGELOG.md  README.md  TapTapPaw.code-workspace  TapTapPaw.sln
3d Print Case/: taptappaw.3mf
app/: README.md  install_readme.md  package-lock.json  package.json
app/assets/: entitlements.mac.plist  icon.icns
app/core/: macos.js  taptappaw.js  weather.js  windows.js
app/desktop_app/: TapTapPaw-1.0.0-arm64.dmg
app/main/: dev-run.js  main.js
document/: affiliate.txt
enclosure/: taptappaw.3mf
sketch/: .gitignore  platformio.ini
sketch/data/: file_to_save_in_LittleFS.txt
sketch/include/: LGFX_CYD.h  app_config.h  lv_conf.h
sketch/partitions/: littlefs_300k_ota.csv  max_app_only.csv  readme.md
sketch/src/: accessory.cpp  accessory.h  animation.cpp  animation.h  (+1 more)
sketch/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen_main.c  ui_Screen_main.h  ui_Screen_setting.c  ui_Screen_setting.h  ui_Screen_title1.c  ui_Screen_title1.h  ui_events.cpp  ui_events.h  ui_font_DynaPuff10.c  ui_font_itim16.c  ui_img_a_clock_png.c  ui_img_closeeye_png.c  ui_img_cloud_png.c  ui_img_leftmousepaw_png.c  ui_img_longhand_png.c  ui_img_main_png.c  ui_img_moon_png.c  ui_img_paw_png.c  ui_img_rain_png.c  ui_img_rightpawdown_png.c  ui_img_rightpawup_png.c  ui_img_secondhand_png.c  ui_img_shorthand_png.c  ui_img_sleepy_png.c  ui_img_snow_png.c  ui_img_storm_png.c  ui_img_sun_png.c  ui_img_taptappaw_png.c  ui_img_wallpaper_png.c
squareline/: SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  SquareLine_Project_events.py  project.info
(+11 files in other folders)
